Change IPFileShallow fileLocation type from URL to URI